# eppink_utilities

./: .bump2version.cfg  .bumpversion.cfg  CHANGELOG.md  CITATION.cff  FUNCTIONS.md  LICENSE.txt  README.md  pyproject.toml  release.sh  requirements.txt  setup.cfg  todo.txt  update_requirements.sh
eppink_utilities/: __init__.py  data_utils.py  dimless_utils.py  file_utils.py  general_utils.py  heattransfer_utils.py  math_utils.py  plot_utils.py  thermo_utils.py
eppink_utilities.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eppink_utilities/lookup_tables/: properties_nist.json
